--- a/app.json
+++ b/app.json
@@ -28,6 +28,12 @@
       }
     ]
   },
+  "plugins": {
+    "captcha4": {
+      "version": "2.7.4",
+      "provider": "wx1629d117cf9be937"
+    }
+  },
   "style": "v2",
   "componentFramework": "glass-easel",
   "sitemapLocation": "sitemap.json",
