feat:1.装备验收页面ui开发完成

--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
   "window": {
     "navigationBarTextStyle": "black",
     "navigationBarTitleText": "Weixin",
-    "navigationBarBackgroundColor": "#ffffff"
+    "navigationBarBackgroundColor": "#ffffff",
+    "navigationStyle": "custom"
   },
   "tabBar": {
     "color": "#424242",
